refactor mapper and db
